@@ -11,6 +11,7 @@ cdrkit (1.1.1) UNRELEASED; urgency=low
   * cleanup with unused embedded CVS revision strings from Schilling and
     more gcc -Wall correctness
   * reenabled -format functionality (bug in program function control flow)
+  * get maximum DMA buffer size from sysfs on Linux, where possible
 
   [ Thomas Schmidt ]
   * workaround for older libmagic API
